# wcs

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: image.yaml  publish.yaml
WebComponentsScan/: web_components_scan.py
dockerfiles/: base.Dockerfile  package.Dockerfile
example-components/: henk.ts  package-lock.json  package.json  tina.ts  tsconfig.json
example-components/implementations/: henk.html  index.html  tina.html
tests/: test_web_components_scan.py
