[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name ="web-components-scan"
version = "1.0.0"
description = "WCS is a Python application that scans HTML files within a specified directory based on the @custom-elements-manifest/analyzer npm package. This npm packages generates a custom-elements.json file containing information about custom HTML tags. With this file we can scan html files for implementations."
readme = "README.md"
requires-python = ">=3.12"

